--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
 body {
     font-family: sans-serif
 }
+
+.hidden {
+    display: none;
+}
+
+#char-img {
+    height: 400px;
+    width: 417px;
+}
